kubernetes/deployment-stockmanager.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockmanager
spec:
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
    type: RollingUpdate
  selector:
    matchLabels:
      app: stockmanager
  replicas: 1
  template:
    metadata:
      labels:
        app: stockmanager
    spec:
      containers:
      - name: stockmanager
        image: frankielemalhonnete/stockmanager:main-27
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8030
...
