kubernetes/service-productcatalogue.yml
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogue
  labels:
    app: productcatalogue
spec:
  type: NodePort
  selector:
    app: productcatalogue
  ports:
  - name: http
    protocol: TCP
    port: 8020
...
