kubernetes/service-shopfront.yml
---
apiVersion: v1
kind: Service
metadata:
  name: shopfront
  labels:
    app: shopfront
spec:
  type: NodePort
  selector:
    app: shopfront
  ports:
  - name: http
    protocol: TCP
    port: 8010
...
