kubernetes/service-stockmanager.yml
---
apiVersion: v1
kind: Service
metadata:
  name: stockmanager
  labels:
    app: stockmanager
spec:
  type: NodePort
  selector:
    app: stockmanager
  ports:
  - name: http
    protocol: TCP
    port: 8030
...
